--- a/style.css
+++ b/style.css
@@ -44,9 +44,9 @@ body {
     }
     
     .bloc-lg {
-    padding:100px 50px
+    padding:100px 50px;
+
     }
-    
     .bloc-md {
     padding:50px
     }
@@ -240,7 +240,7 @@ body {
     float:right;
     z-index:1
     }
-    
+   
     .nav > li {
     float:left;
     margin-top:4px;
@@ -397,7 +397,6 @@ body {
     .icon-md {
     font-size:30px!important
     }
-    
     .icon-lg {
     font-size:60px!important
     }
@@ -553,7 +552,7 @@ body {
     background:none
     }
     
-    h1,,h3,h4,h5,h6,p,label,.btn,a {
+    h1,h3,h4,h5,h6,p,label,.btn,a {
     font-family:"helvetica";
     font-weight:400;
     color:#575757!important
@@ -755,13 +754,13 @@ body {
     }
     }
     
-    @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+    @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
     background-attachment:scroll
     }
     }
     
-    @media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+    @media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
     background-attachment:scroll
     }
@@ -803,7 +802,6 @@ body {
     overflow-x:hidden;
     position:relative
     }
-    
     h1,h2,h3,h4,h5,h6,p,#disqus_thread {
     padding-left:10px!important;
     padding-right:10px!important
@@ -812,7 +810,11 @@ body {
     .b-parallax {
     background-attachment:scroll
     }
-    
+    .col-sm-6
+    {
+        
+        width: 100%;
+    }
     .navbar .nav {
     padding-top:0;
     border-top:1px solid rgba(0,0,0,.2);
@@ -823,7 +825,14 @@ body {
     margin-left:0;
     margin-right:0
     }
-    
+    .row
+    {
+        width: 100%;
+    }
+    h1 , h3
+    {
+        margin-left: 6%;
+    }
     .site-navigation {
     position:inherit;
     transform:none;
@@ -868,6 +877,9 @@ body {
     .hero-nav {
     left:-1px;
     right:-1px
+    }
+    .mg-md {
+    margin-left: 7%;
     }
     
     .navbar-collapse {
