--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ body {
     }
     
     #bloc-1-hero h1 {
-    font-size:32px
+    font-size:2.5em
     }
     
     .navbar {
@@ -584,7 +584,7 @@ body {
     }
     
     p {
-    font-size:1em
+    font-size:1.5em
     }
     
     .tight-width-whitespace {
@@ -602,7 +602,7 @@ body {
     color:#FFF!important;
     text-transform:uppercase;
     padding:12px 28px;
-    font-size:16px;
+    font-size:1.5em;
     font-weight:700
     }
     
@@ -612,12 +612,13 @@ body {
     }
     
     h2 {
-    font-size:22px;
-    line-height:1.4em
+    font-size:1.5em;
+    line-height:1.4em;
+    background-color: ;
     }
     
     h3 {
-    font-size:15px;
+    font-size:1.5em;
     text-transform:uppercase;
     font-weight:700;
     color:#333!important
