--- a/style.css
+++ b/style.css
@@ -607,14 +607,14 @@ body {
     }
     
     .social {
-    max-width:400px;
-    margin:auto
+    
+    margin:auto;
+    
     }
     
     h2 {
     font-size:1.5em;
     line-height:1.4em;
-    background-color: ;
     }
     
     h3 {
